--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="./assets/images/air.png"
+                    src="./assets/images/air.PNG"
                     alt=""
                   />
                 </div>
@@ -238,7 +238,6 @@
               <div class="social-icons">
                 <a href="#"><i class="lab la-twitter"></i></a>
                 <a href="#"><i class="lab la-instagram"></i></a>
-                <a href="#"><i class="lab la-dribbble"></i></a>
                 <a href="#"><i class="lab la-github"></i></a>
               </div>
             </div>
